# AppMod

./: .gitignore  CMakeLists.txt  README.md
lib/: QGLViewer2.lib  QGLViewerd2.lib  libcholmod.lib  nlopt-old.lib  nlopt.lib  nloptd.lib
src/: global.h  main.cpp
src/Alg/: AlgHandler.cpp  AlgHandler.h  GeometryPartAlg.cpp  GeometryPartAlg.h  I2SAlgorithms.h  ImagePartAlg.cpp  ImagePartAlg.h  MPara.cpp  MPara.h  TexSynHandler.cpp  TexSynHandler.h
src/Alg/Deform/: AppSynthesis.cpp  CurveGuidedVectorField.cpp  CurveGuidedVectorField.h  DetailSynthesis.cpp  DetailSynthesis.h  FeatureGuided.cpp  FeatureGuided.h  FeatureGuidedUtility.cpp  FeatureGuidedVis.cpp  FeatureGuidedVis.h  GeometryPartAlg.cpp  GeometryPartAlg.h  GeometryTransfer.cpp  GeometryTransfer.h  KevinVectorField.cpp  KevinVectorField.h  LargeFeatureCrsp.cpp  LargeFeatureCrsp.h  LargeFeatureReg.cpp  LargeFeatureReg.h  LargeFeatureRegNonRigid.cpp  LargeFeatureRegRigid.cpp  NormalTransfer.cpp  NormalTransfer.h  ProjICP.cpp  ProjICP.h  ProjOptimize.cpp  ProjOptimize.h  VectorFieldCanvas.cpp  VectorFieldCanvas.h
src/Alg/InverseRendering/: ImagePartAlg.cpp
src/Alg/NormalGuidedDeform/: GeometryPartAlg.cpp
src/Alg/SIFTFlow/: BPFlow.cpp  ImagePyrd.h  SIFTFlowWrapper.h
src/Alg/SIRFS/: DecompImg.cpp  DecompImg.h  ImagePartAlg.h
src/Alg/Solver/: ARAP.cpp  ARAP.h  Constraint.h  FastMassSpring.cpp  FastMassSpring.h  LineConstraint.cpp  LineConstraint.h  MoveConstraint.cpp  MoveConstraint.h  NormalConstraint.cpp  NormalConstraint.h  PlaneConstraint.cpp  PlaneConstraint.h  ProjConstraint.cpp  ProjConstraint.h  Solver.cpp  Solver.h
src/Alg/TeleReg/: CurveExpl.cpp  CurveIntpl.cpp  LoadCurve.cpp  Penalty.cpp  cholmod_matrix.h  cholmod_vector.h  corres.cpp  curveDirec.cpp  energyFunc.cpp  initEnvi.cpp  outputCurve.cpp  runRegister.cpp  scalarField.cpp  tele2d.h  tele_basicType.h  vectorField.cpp
src/Camera/: StandardCamera.h
src/Deform/: Deform.cpp  Deform.h
src/DispModule/Camera/: StandardCamera.cpp  StandardCamera.h
src/DispModule/Canvas/: MainCanvas.cpp  MainCanvas.h  SynthesisCanvas.cpp  SynthesisCanvas.h  TrackballCanvas.cpp  TrackballCanvas.h  VectorFieldCanvas.cpp  VectorFieldCanvas.h
src/DispModule/Light/: Light.cpp  Light.h
src/DispModule/Ray/: Ray.cpp  Ray.h
src/DispModule/Samples/: GenerateSamples.cpp  GenerateSamples.h  SAMPLE.h  SH.cpp  SH.h
src/DispModule/Viewer/: BasicViewer.cpp  BasicViewer.h  DispObject.cpp  DispObject.h  FeatureGuidedVis.cpp  FeatureGuidedVis.h  GLActor.cpp  GLActor.h  MainCanvasViewer.cpp  MainCanvasViewer.h  SynthesisViewer.cpp  SynthesisViewer.h  TrackballViewer.cpp  TrackballViewer.h  VectorFieldViewer.cpp  VectorFieldViewer.h  Viewer.cpp  Viewer.h
src/DispModule/shader/: edge.frag  edge.vert  fragmentShader.frag  fragmentShader.fsh  lf_update.frag  lf_update.vert  sketch.frag  sketch.vert  vertexShader.vert  vertexShader_texture.vsh
src/LOG/: LOG.cpp  LOG.h
src/Light/: Light.cpp
src/Model/: AppearanceModel.cpp  AppearanceModel.h  Bound.cpp  Bound.h  Coarse.cpp  Coarse.h  CrestCode.cpp  CrestCode.h  FeatureLine.cpp  FeatureLine.h  GroundTruth.cpp  GroundTruth.h  MainCanvas.cpp  MainCanvas.h  Model.cpp  Model.h  ModelLight.cpp  ModelLight.h  ParaShape.cpp  ParaShape.h  Shape.cpp  Shape.h  ShapeCrest.cpp  ShapeCrest.h  ShapePlane.cpp  ShapePlane.h  ShapeSymmetry.cpp  ShapeSymmetry.h  Sphere.cpp  Sphere.h  TrackballCanvas.cpp  TrackballCanvas.h  geometry_types.h  shape_manipulator.cpp  shape_manipulator.h
src/Ray/: Ray.cpp  Ray.h
src/SIFTFlow/: BPFlow.h  Image.h  ImageFeature.h  ImageProcessing.h  SIFTFlowWrapper.cpp  project.h
src/Samples/: GenerateSamples.cpp  SH.h
src/Texture_UI/: Dialog_Database.cpp  Dialog_Database.h  Dialog_Database.ui  Facet_Group.cpp  Facet_Group.h  MainWindow_Texture.cpp  MainWindow_Texture.h  MainWindow_Texture.ui  Texture_Canvas.cpp  Texture_Canvas.h  Texture_Label.cpp  Texture_Label.h  Texture_Viewer.cpp  Texture_Viewer.h  canvas_miniview.cpp  canvas_miniview.h  facet.cpp  facet.h  mini_texture.cpp  mini_texture.h  poly_mesh.cpp  poly_mesh.h  shape_item.cpp  shape_item.h  shape_list.cpp  shape_list.h  texture_points_corres.cpp  texture_points_corres.h  vertex.h  viewer_selector.cpp  viewer_selector.h
src/Utility/: BasicDataType.h  BasicHeader.h  Colormap.h  CurvesUtility.cpp  CurvesUtility.h  Histogram.h  ImageUtility.cpp  ImageUtility.h  KDTreeWrapper.cpp  KDTreeWrapper.h  LOG.cpp  LOG.h  MeshParameterization.cpp  MeshParameterization.h  PLY2Reader.cpp  PLY2Reader.h  ParaInit.h  RandSample.h  ScalarField.cpp  ScalarField.h  ShapeUtility.cpp  ShapeUtility.h  SynthesisTool.cpp  SynthesisTool.h  SynthesisToolExt.cpp  UtilityHeader.h  Vector3.cpp  Vector3.h  VectorVariation.h  VtkUtility.cpp  VtkUtility.h  YMLHandler.cpp  YMLHandler.h  kdtree.cpp
src/Utility/Voxeler/: BoundingBox.cpp  BoundingBox.h  Voxel.h  Voxeler.cpp  Voxeler.h  voxel_weld.h
src/Viewer/: GLActor.h  Viewer.cpp  Viewer.h
src/shader/: fragmentShader.fsh  fragmentShader_texture.fsh  vertexShader.vsh
src/ui/: DispModuleHandler.cpp  DispModuleHandler.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ParameterDock.cpp  ParameterDock.h  ParameterDock.ui  PolygonMesh_Manipulator.cpp  PolygonMesh_Manipulator.h  UI.qrc  color.h  color_table.h  mainWin.cpp  mainWin.h  mainWin.ui
